<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:transitionGroup="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/list_note_item"
        tools:spanCount="2" />

    <ViewStub
        android:id="@+id/empty_data_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/list_empty_data" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_note_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_note_content_description"
        android:text="@string/add_note_content_description"
        app:icon="@android:drawable/ic_menu_edit"
        app:layout_anchor="@id/notes_view"
        app:layout_anchorGravity="bottom|end"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                style="@style/Noticky.SearchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-10dp"
                android:contentDescription="@string/search_created_notes_content_description"
                android:hint="@string/search_notes_hint"
                app:layout_constraintEnd_toStartOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_search"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/search_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_bar"
                app:layout_constraintTop_toTopOf="@id/search_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view_notes"
        style="@style/Noticky.SearchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_notes_hint"
        android:theme="@style/Noticky.SearchViewTheme"
        app:layout_anchor="@id/search_bar">

    </com.google.android.material.search.SearchView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>